--- a/src/pages/home/homeStyle.css
+++ b/src/pages/home/homeStyle.css
@@ -21,6 +21,16 @@
     align-items: center;
     justify-content: center;
     margin-left: 50px;
+    background-image: url("https://i.ytimg.com/vi/XyB8GuwWMIs/maxresdefault.jpg");
+    background-size: 100%;
+    position: relative;
+}
+
+#dobsFaceHeader {
+    position: absolute;
+    width: 23px;
+    height: 23px;
+    top: 6px;
 }
 
 #headerTitle {
@@ -125,33 +135,37 @@
 #infoSection {
     width: 100vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #dolbyPic {
-    margin-top: 140px;
-    margin-left: 20vw;
     height: 400px;
     border-radius: 20px;
 }
 
 #infoText {
-    display: inline-block;
-    margin-left: 30px;
+    margin-left: 60px;
     width: 400px;
     height: 400px;
-    background-color: red;
 }
 
 #infoTitle {
-    
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 40px;
 }
 
 #infoParagraph {
-    
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 30px;
+    margin-top: 20px;
 }
 
-/* howItWorks --------------------------------------------------------------------------------------------- */
-#howItWorks {
+/* team --------------------------------------------------------------------------------------------- */
+#team {
     width: 100vw;
     height: 100vh;
     /* background-color: rgb(0, 183, 255); */
@@ -163,28 +177,11 @@
     align-items: center;
 }
 
-#totalArea {
-    margin-top: -60px;
-}
-
-#totalTitle {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    color: white;
-    font-size: 40px;
-}
-
-#totalSupply {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    color: white;
-    font-size: 80px;
-}
-
-#contract {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    color: black;
+.member {
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    margin-right: 30px;
 }
 
 #footer {
@@ -209,7 +206,7 @@
 /* stats --------------------------------------------------------------------------------------------- */
 #stats {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     background-color: black;
     position: relative;
     text-align: center;
@@ -240,8 +237,32 @@
     margin-top: 40px;
 }
 
-@media only screen and (max-width: 1000px) {
-   
+@media only screen and (max-width: 700px) {
+    #infoSection {
+        display: initial;
+        margin-left: 10vw;
+    }
+
+    #dolbyPic {
+        margin-top: 80px;
+    }
+
+    #infoText {
+        margin-left: 0px;
+        margin-left: 10vw;
+        width: 80vw;
+    }
+    
+    #infoTitle {
+        padding-top: 40px;
+        font-size: 25px;
+    }
+    
+    #infoParagraph {
+        margin-top: 10px;
+        font-size: 20px;
+    }
+    
 }
 
 @media only screen and (max-width: 510px) {
