--- a/src/pages/home/homeStyle.css
+++ b/src/pages/home/homeStyle.css
@@ -168,20 +168,55 @@
 #team {
     width: 100vw;
     height: 100vh;
-    /* background-color: rgb(0, 183, 255); */
     background-color: #0bd2ff;
-    position: relative;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+#teamTitle {
+    margin-top: -120px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: white;
+    font-size: 40px;
+}
+
+.block {
+    display: block;
 }
 
 .member {
-    width: 140px;
-    height: 140px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
-    margin-right: 30px;
+    display: block;
+}
+
+#membersOnly {
+    margin-top: 100px;
+    width: 800px;
+    max-width: 100vw;
+    display: flex;
+    justify-content: space-between;
+}
+
+.memberName {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: white;
+    font-size: 20px;
+    margin-top: 15px;
+}
+
+.memberTitle {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    color: white;
+    font-size: 15px;
+    margin-top: 5px;
 }
 
 #footer {
@@ -278,5 +313,18 @@
         font-weight: 600;
         color: white;
         font-size: 45px;
+    }
+    #membersOnly {
+        display: block;
+        margin-top: 0px;
+    }
+    .member {
+        margin-left: calc(50vw - 50px);
+        margin-top: 50px;
+        width: 100px;
+        height: 100px;
+    }
+    #teamTitle {
+        margin-top: 0px;
     }
 }
